Improve Event API (cherry-picked from e1e6b4d80b0bc403b9f9f8dd529946c0a65a7236)